fixed horizontal scroll

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   padding: 0.5em;
   color: white;
   border-bottom: 5px solid rgb(0, 6, 94);
-  width: 100vw;
+  width: 100%;
 }
 #titleContainer{
   text-align: center;
