--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,10 @@
 @import "~font-awesome/css/font-awesome.css";
 body{
   font-family: "Open Sans";
+  margin: 0;
+  padding: 0;
+}
+.p-grid{
+  margin: 0 !important;
 }
 
